Fix for layout issue on smaller screens.

--- a/client/my-sites/stats/wordads/style.scss
+++ b/client/my-sites/stats/wordads/style.scss
@@ -17,6 +17,7 @@
 .highlight-cards.wordads {
 	h1 {
 		display: flex;
+		flex-flow: nowrap;
 		align-items: center;
 	}
 	.highlight-card {
